--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <div class="menu">
     <a href=index.html>Home</a>
   
-    <a href=gallary/gallary.html>Gallary</a>
+    <a href=gallary.html>Gallary</a>
   
-    <a href=/Game/game.html>Games</a>
+    <a href=game.html>Games</a>
   
-    <a href=/Contact/contact.html>Contact</a>
+    <a href=contact.html>Contact</a>
   </div>
   
 <h1 align=center> Mero Games</h1>
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body> <p align=center > <img src="photo/logo.png" alt="photo/logo.png" height="125" width="125" >
