--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body> <p align=center > <img src="photo/logo.png" alt="photo/logo.png" height="125" width="125" >
+<body> <p align=center > <img src="logo.png" alt="photo/logo.png" height="125" width="125" >
 </p>
 </body>
 
