--- a/game.html
+++ b/game.html
@@ -1,4 +1,4 @@
-<!-- Created by ABBOS -->
+<!-- Created by Mero Games -->
 
 <!DOCTYPE html>
  <head>
@@ -10,8 +10,8 @@
     <body>
       <div class="box">
       
-        <a href="chess/chess.html" style="--clr: yellow; --i:0"><span>Chess </span></a> <br>
-        <a href="/Game/chess/chess.html" style="--clr: red; --i:1"><span>chess</span></a>
+        <a href="chess.html" style="--clr: yellow; --i:0"><span>Chess </span></a> <br>
+        <a href="chess/chess.html" style="--clr: red; --i:1"><span>chess</span></a>
 </div>
 
   <div class="menu">
@@ -19,9 +19,9 @@
   
     <a href=gallary/gallary.html style="--clr: pink ; --i:0"<span>Gallary </span></a>
   
-    <a href=/Game/game.html style="--clr: pink ; --i:0"<span>Games</span></a>
+    <a href=game.html style="--clr: pink ; --i:0"<span>Games</span></a>
   
-    <a href=contact/contact.html style="--clr: pink ; --i:0"<span>Contact</span></a>
+    <a href=contact.html style="--clr: pink ; --i:0"<span>Contact</span></a>
   </div>
     </body>
     <footer>
