--- a/chess.html
+++ b/chess.html
@@ -10,11 +10,11 @@
       <div class="menu">
     <a href=index.html>Home</a>
   
-    <a href=gallary/gallary.html>Gallary</a>
+    <a href=gallary.html>Gallary</a>
   
-    <a href=game/game.html>Games</a>
+    <a href=game.html>Games</a>
   
-    <a href=contact/contact.html>Contact</a>
+    <a href=contact.html>Contact</a>
   </div>
   
     <h1 align=middle>Chess</h1>
